unpackaged/main/default/objects/LTV__c/LTV__c.object-meta.xml
<CustomObject>
    <description>Lifetime Value</description>
    <label>LTV</label>
    <nameField>
        <label>LTV Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LTV Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>