unpackaged/main/default/objects/LTV__c/fields/Account_Domain__c.field-meta.xml
<CustomField>
    <fullName>Account_Domain__c</fullName>
    <externalId>true</externalId>
    <label>Account Domain</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>