unpackaged/main/default/objects/LTV__c/fields/AOV_Prediction__c.field-meta.xml
<CustomField>
    <fullName>AOV_Prediction__c</fullName>
    <label>AOV Prediction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>