unpackaged/main/default/objects/LTV__c/fields/Churn_Prediction_1_Month_Ago__c.field-meta.xml
<CustomField>
    <fullName>Churn_Prediction_1_Month_Ago__c</fullName>
    <label>Churn Prediction 1 Month Ago</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>