unpackaged/main/default/objects/LTV__c/fields/Churn_Prediction__c.field-meta.xml
<CustomField>
    <fullName>Churn_Prediction__c</fullName>
    <label>Churn Prediction</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>