unpackaged/main/default/objects/LTV__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The email address of the customer</description>
    <externalId>true</externalId>
    <label>Customer Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>