unpackaged/main/default/objects/LTV__c/fields/Discounted_LTV_Gross_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Discounted_LTV_Gross_Revenue__c</fullName>
    <label>Discounted LTV Gross Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>