unpackaged/main/default/objects/LTV__c/fields/First_Order__c.field-meta.xml
<CustomField>
    <fullName>First_Order__c</fullName>
    <label>First Order</label>
    <type>Date</type>
</CustomField>