unpackaged/main/default/objects/LTV__c/fields/First_Quote__c.field-meta.xml
<CustomField>
    <fullName>First_Quote__c</fullName>
    <label>First Quote</label>
    <type>Date</type>
</CustomField>