unpackaged/main/default/objects/LTV__c/fields/Freq_Prediction__c.field-meta.xml
<CustomField>
    <fullName>Freq_Prediction__c</fullName>
    <label>Freq Prediction</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>