unpackaged/main/default/objects/LTV__c/fields/Last_Order__c.field-meta.xml
<CustomField>
    <fullName>Last_Order__c</fullName>
    <label>Last Order</label>
    <type>Date</type>
</CustomField>