unpackaged/main/default/objects/LTV__c/fields/Last_Quote__c.field-meta.xml
<CustomField>
    <fullName>Last_Quote__c</fullName>
    <label>Last Quote</label>
    <type>Date</type>
</CustomField>