unpackaged/main/default/objects/LTV__c/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <formula>LastModifiedDate</formula>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>