unpackaged/main/default/objects/LTV__c/fields/Lifetime__c.field-meta.xml
<CustomField>
    <fullName>Lifetime__c</fullName>
    <label>Lifetime</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>