unpackaged/main/default/objects/LTV__c/fields/Lifetime_Order_Count__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Order_Count__c</fullName>
    <label>Lifetime Order Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>