unpackaged/main/default/objects/LTV__c/fields/LTV_1_Month_Ago__c.field-meta.xml
<CustomField>
    <fullName>LTV_1_Month_Ago__c</fullName>
    <label>LTV 1 Month Ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>