unpackaged/main/default/objects/LTV__c/fields/LTV_2_Months_Ago__c.field-meta.xml
<CustomField>
    <fullName>LTV_2_Months_Ago__c</fullName>
    <label>LTV 2 Months Ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>