unpackaged/main/default/objects/LTV__c/fields/LTV_Gross_Revenue_1_Month_Ago__c.field-meta.xml
<CustomField>
    <fullName>LTV_Gross_Revenue_1_Month_Ago__c</fullName>
    <label>LTV Gross Revenue 1 Month Ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>