unpackaged/main/default/objects/LTV__c/fields/Observed_Customer_Lifetime__c.field-meta.xml
<CustomField>
    <fullName>Observed_Customer_Lifetime__c</fullName>
    <label>Observed Customer Lifetime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>