unpackaged/main/default/objects/LTV__c/fields/Order_Casting__c.field-meta.xml
<CustomField>
    <fullName>Order_Casting__c</fullName>
    <label>Order Casting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>