unpackaged/main/default/objects/LTV__c/fields/Order_CNC__c.field-meta.xml
<CustomField>
    <fullName>Order_CNC__c</fullName>
    <label>Order CNC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>