unpackaged/main/default/objects/LTV__c/fields/Order_DMLS__c.field-meta.xml
<CustomField>
    <fullName>Order_DMLS__c</fullName>
    <label>Order DMLS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>