unpackaged/main/default/objects/LTV__c/fields/Order_FDM__c.field-meta.xml
<CustomField>
    <fullName>Order_FDM__c</fullName>
    <label>Order FDM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>