unpackaged/main/default/objects/LTV__c/fields/Order_MJF__c.field-meta.xml
<CustomField>
    <fullName>Order_MJF__c</fullName>
    <label>Order MJF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>