unpackaged/main/default/objects/LTV__c/fields/Order_Polyjet__c.field-meta.xml
<CustomField>
    <fullName>Order_Polyjet__c</fullName>
    <label>Order Polyjet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>