unpackaged/main/default/objects/LTV__c/fields/Order_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Order_Sheet__c</fullName>
    <label>Order Sheet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>