unpackaged/main/default/objects/LTV__c/fields/Order_SLA__c.field-meta.xml
<CustomField>
    <fullName>Order_SLA__c</fullName>
    <label>Order SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>