unpackaged/main/default/objects/LTV__c/fields/Order_SLS__c.field-meta.xml
<CustomField>
    <fullName>Order_SLS__c</fullName>
    <label>Order SLS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>