unpackaged/main/default/objects/LTV__c/fields/Past_Order_AOV__c.field-meta.xml
<CustomField>
    <fullName>Past_Order_AOV__c</fullName>
    <label>Past Order AOV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>