unpackaged/main/default/objects/LTV__c/fields/Past_Order_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Past_Order_Frequency__c</fullName>
    <label>Past Order Frequency</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>