unpackaged/main/default/objects/LTV__c/fields/Past_Order_Processes__c.field-meta.xml
<CustomField>
    <fullName>Past_Order_Processes__c</fullName>
    <label>Past Order Processes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>