unpackaged/main/default/objects/LTV__c/fields/Past_Quote_Processes__c.field-meta.xml
<CustomField>
    <fullName>Past_Quote_Processes__c</fullName>
    <label>Past Quote Processes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>