unpackaged/main/default/objects/LTV__c/fields/Quote_BJ_3_D__c.field-meta.xml
<CustomField>
    <fullName>Quote_BJ_3_D__c</fullName>
    <label>Quote BJ 3 D</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>