unpackaged/main/default/objects/LTV__c/fields/Quote_Casting__c.field-meta.xml
<CustomField>
    <fullName>Quote_Casting__c</fullName>
    <label>Quote Casting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>