unpackaged/main/default/objects/LTV__c/fields/Quote_CNC__c.field-meta.xml
<CustomField>
    <fullName>Quote_CNC__c</fullName>
    <label>Quote CNC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>