unpackaged/main/default/objects/LTV__c/fields/Quote_DMLS__c.field-meta.xml
<CustomField>
    <fullName>Quote_DMLS__c</fullName>
    <label>Quote DMLS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>