unpackaged/main/default/objects/LTV__c/fields/Quote_FDM__c.field-meta.xml
<CustomField>
    <fullName>Quote_FDM__c</fullName>
    <label>Quote FDM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>