unpackaged/main/default/objects/LTV__c/fields/Quote_MJF__c.field-meta.xml
<CustomField>
    <fullName>Quote_MJF__c</fullName>
    <label>Quote MJF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>