unpackaged/main/default/objects/LTV__c/fields/Quote_Polyjet__c.field-meta.xml
<CustomField>
    <fullName>Quote_Polyjet__c</fullName>
    <label>Quote Polyjet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>