unpackaged/main/default/objects/LTV__c/fields/Quote_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Quote_Sheet__c</fullName>
    <label>Quote Sheet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>