unpackaged/main/default/objects/LTV__c/fields/Quote_SLA__c.field-meta.xml
<CustomField>
    <fullName>Quote_SLA__c</fullName>
    <label>Quote SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>