unpackaged/main/default/objects/LTV__c/fields/Quote_SLS__c.field-meta.xml
<CustomField>
    <fullName>Quote_SLS__c</fullName>
    <label>Quote SLS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>