unpackaged/main/default/objects/LTV__c/recordTypes/Account_LTV.recordType-meta.xml
<RecordType>
    <fullName>Account_LTV</fullName>
    <active>true</active>
    <description>Account level LTV</description>
    <label>Account LTV</label>
</RecordType>