unpackaged/main/default/objects/LTV__c/recordTypes/Contact_LTV.recordType-meta.xml
<RecordType>
    <fullName>Contact_LTV</fullName>
    <active>true</active>
    <description>Contact level LTV</description>
    <label>Contact LTV</label>
</RecordType>